--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,11 @@ p {
     font-style: italic;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.page {
+    background-color: rgb(214, 214, 214);
+}
+
+.page__header {
+    background-color: rgb(100, 100, 100);
+}
